2006-05-16  Alasdair Allan <aa@astro.ex.ac.uk>

       * VOEvent.pm: Modified the <WhereWhen> parsing and generation to
         use the new "default" V1.1 standard way of doing things. Also
	 added parsing for several different STC co-ordinate representations
	 that have been seen in the wild so far with the prototypes.
	 
2006-04-30  Alasdair Allan <aa@astro.ex.ac.uk>

       * VOEvent.pm: Modified to handle <VOEvent ivorn=""> and to have
         some backwards support for <VOEvent id="">. 

2006-03-21  Alasdair Allan <aa@astro.ex.ac.uk>

       * VOEvent.pm: Fixed <WhereWhen type="simple"> representation to
         account for lack of error in the RA and Dec positions. Updated
         the <Why> to be compliant with VOEvent v1.1 standard. Updated the
         standard version tags to 1.1x and HTN/0.2 repsectively. Removed
         <WhereWhen type="stc"> tag to make the messages validate!
         
2005-12-28  Alasdair Allan <aa@astro.ex.ac.uk>

       * VOEvent.pm: modifed time() method so it looks in <Who> if there
         isn't a valid datestamp in the <WhereWhen> tag.
 
2005-12-19  Alasdair Allan <aa@astro.ex.ac.uk>

        * VOEvent.pm: Fixed casing problem for <WhereWhen type="simple">,
          added parsing for date stamp from <WhereWhen>

2005-12-16  Alasdair Allan <aa@astro.ex.ac.uk>

        * VOEvent.pm: Added further parsing support
	
2005-12-15  Alasdair Allan <aa@astro.ex.ac.uk>

	* VOEvent.pm: Moved to XML::Simple for parsing.
        
        * VOEvent.pm: Limited STC support.
	
2005-07-27  Alasdair Allan <aa@astro.ex.ac.uk>

        * VOEvent.pm: Support for "simple" positions, synced with RAPTOR
	  parser for interoperability between the networks.

2005-05-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * Import into Sourceforge CVS

2005-04-22  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version.