@@ -5,6 +5,9 @@
 	 added parsing for several different STC co-ordinate representations
 	 that have been seen in the wild so far with the prototypes.
 	 
+       * VOEvent.pm: More STC fixes for <ObservatoryLocation> and the
+         <AstroCoordSystem> tag support.	 
+	 
 2006-04-30  Alasdair Allan <aa@astro.ex.ac.uk>
 
        * VOEvent.pm: Modified to handle <VOEvent ivorn=""> and to have
